--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "guzzlehttp/guzzle": "^7.0",
+        "mmucklo/email-parse": "^2.0",
+        "phpoffice/phpspreadsheet": "^1.13",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
